--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,4 @@ android.useAndroidX=true
 org.gradle.jvmargs=-Xmx2g
 
 LIBRARY_VERSION=0.1
-#GROUP=co.touchlab.kmmbridgekickstart
+GROUP=com.menno.kmmbridgekickstart
